--- a/css/main.css
+++ b/css/main.css
@@ -427,7 +427,9 @@ tr:nth-child(2n) {
     padding-top: 0;
     padding-bottom: 2rem;
     flex-wrap: wrap;
-    
+    padding-top: 1.7rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 #box-day img,
@@ -445,7 +447,7 @@ tr:nth-child(2n) {
     background-size: cover;
     background-position: center;
     padding-top: 1.7rem;
-    
+    display: none;
 }
 
 button {
@@ -471,3 +473,127 @@ button {
     margin-left: 3rem; 
 }
 
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+ margin-top: 2rem;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+ background: url('https://raw.githubusercontent.com/ancapopescu6/timex_redesign/master/moon-nobg.png');
+    background-position: right;
+    background-size: 30%;
+    background-clip: padding-box;
+    background-repeat: no-repeat;    
+border: 1px solid var(--secondary-color);
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #fff;
+  background: url('https://raw.githubusercontent.com/ancapopescu6/timex_redesign/master/sun-nobg.png');
+    background-position: left;
+    background-size: 40%;
+    background-clip: padding-box;
+    background-repeat: no-repeat;
+ border: 1px solid var(--secondary-color);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+  background-color: #fff;
+  border: 1px solid var(--secondary-color);
+
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+    
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+    
+    
+}
+
+.slider.round:before {
+  border-radius: 50%; 
+  background: url('https://raw.githubusercontent.com/ancapopescu6/timex_redesign/master/moon-bg.png');
+    background-position: center;
+    background-size: cover;
+}
+
+
+footer {
+    background-color: #131A22;
+    width: 100%;
+    padding: 1rem;
+    color: #fff;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    border: 0;
+}
+
+footer p {
+    font-size: 0.7rem;
+    margin: 0;
+}
+
+
+#footer-right img {
+    width: 40px;
+    padding-bottom: 0;
+    margin: 0;
+    border: 0;
+}
+
+.fa-linkedin {
+    color: #fff;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #fff;
+    text-decoration: none;
+}
