--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ padding: 2rem 0;
 
 .main-nav {
    display: none;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     padding: 1.2rem;
      width: 60%;
 }
@@ -155,6 +155,7 @@ padding: 2rem 0;
     display: block;
     position: absolute;
    right: 2.8rem;
+    top: 2rem;
 }
 
 .fa-ellipsis-v {
